--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>FootyApp</title>
-  <base href="/">
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-118878988-1', 'auto');
+  </script>
+
+
+  <meta charset="utf-8">
+  <title>FootyVerse</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="FootVerse Football Management RPG Sim">
+  <meta name="author" content="Kareem Glover">
+  <meta name="keyword" content="opensource,futbol, football, soccer, online game, simulation, rpg, management, mmo">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <p>(c) 2018 FootyVerse / IceKode</p>
+  <p>Lead Programmer: IamKhova (KJ Glover)</p>
 </body>
 </html>
