--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,6 @@
   <!-- Google Analytics -->
   <script async src=//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js></script>
 
-
-
   <meta charset="utf-8">
   <title>FootyVerse</title>
   <base href="/">
@@ -14,34 +12,33 @@
   <meta name="author" content="Kareem Glover">
   <meta name="keyword" content="opensource,futbol, football, soccer, online game, simulation, rpg, management, mmo">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118878988-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118878988-1');
+  </script>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N4HNWCK');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4HNWCK"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </head>
 <body>
-          <!-- Global site tag (gtag.js) - Google Analytics -->
-              <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118878988-1"></script>
-              <script>
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){dataLayer.push(arguments);}
-                gtag('js', new Date());
+<!-- Enable bootstrap 4 theme -->
+<script>window.__theme = 'bs4';</script>
 
-                gtag('config', 'UA-118878988-1');
-              </script>
-
-          <!-- Google Tag Manager -->
-              <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-                  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-              })(window,document,'script','dataLayer','GTM-N4HNWCK');</script>
-          <!-- End Google Tag Manager -->
-          <!-- Google Tag Manager (noscript) -->
-              <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4HNWCK"
-                                height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-          <!-- End Google Tag Manager (noscript) -->
-
-
-  <app-root></app-root>
-
-  <p>(c) 2018 FootyVerse / IceKode</p>
-  <p>Lead Programmer: IamKhova (KJ Glover)</p>
+<!-- App Loading... -->
 </body>
 </html>
