--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>FootyVerse</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="FootVerse Football Management RPG Sim">
+  <meta name="description" content="FootyVerse Football Management RPG Sim">
   <meta name="author" content="Kareem Glover">
   <meta name="keyword" content="opensource,futbol, football, soccer, online game, simulation, rpg, management, mmo">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
